[dashboard layout issue] Improves layout

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -160,6 +160,7 @@
   align-items: center;
   background-color: white;
   padding: 15px;
+  margin-botton: 5px;
 }
 
 .follower-card-info {
